<resources>
    <string name="app_name">Brain Trainer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title">Найди слагаемое</string>
    <string name="welcome_description">Перед вами будет пример сложения, с одним неизвестным слогаемым.\n\ \n\Сверху, в круге, результат сложения.\n\ \n\А снизу шесть вариантов из которых необходимо выбрать подходящее число, что бы пример решался правильно.\n\ \n\За отведенное время нужно дать как можно больше верных ответов и как можно меньше ошибочных.</string>
    <string name="welcome_button">Понятно</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_logo">Choose logo</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test">Тестовый</string>
    <string name="easy">Легкий</string>
    <string name="normal">Средний</string>
    <string name="hard">Тяжелый</string>
    <string name="timer_00_00">00:00</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="question_mark">\?</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="game_over">Game Over</string>
    <string name="required_answers">Необходимое количество правильных ответов: %s</string>
    <string name="your_result">Ваш результат: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="percentage_right_answers">Процент правильных ответов: %s</string>
    <string name="button_retry">Попробовать снова</string>
</resources>